--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Article preview component</title>
 
   
@@ -15,12 +15,18 @@
   </style>
 </head>
 <body>
-<img src="images/drawers.jpg">
-  <p>Shift the overall look and feel by adding these wonderful touches to furniture in your home</p>
-  <p>Ever been in a room and felt like something was missing? Perharps it felt slightly bare and uninviting. I've got some simple tips to help you make any room feel complete. </p>
-  <img src="images/avatar-michelle.jpg">
-  <p>Michelle Appleton</p>
-  <p>28 Jun 2020</p>
+  <div class="caixaimagem">
+  <img src="images/drawers.jpg" class="imagemcomoda">
+</div>
+
+<main>
+    
+      <h1>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h1>
+      <h2>Ever been in a room and felt like something was missing? Perharps it felt slightly bare and uninviting. I've got some simple tips to help you make any room feel complete. </h2>
+      <img src="images/avatar-michelle.jpg" class="avatarmichelle">
+      <p id="nome">Michelle Appleton</p>
+      <p id="data">28 Jun 2020</p>
+    </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
