--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     
       <h1>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h1>
       <h2>Ever been in a room and felt like something was missing? Perharps it felt slightly bare and uninviting. I've got some simple tips to help you make any room feel complete. </h2>
-      <img src="images/avatar-michelle.jpg" class="avatarmichelle">
-      <p id="nome">Michelle Appleton</p>
-      <p id="data">28 Jun 2020</p>
+      <div class="avatarinfo">
+        <img src="images/avatar-michelle.jpg" class="avatarmichelle">
+        <p id="nome">Michelle Appleton</p>
+        <p id="data">28 Jun 2020</p>
+     </div>
     </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
