--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </style>
 </head>
 <body>
+  <div class="container">
   <div class="caixaimagem">
   <img src="images/drawers.jpg" class="imagemcomoda">
 </div>
@@ -29,10 +30,9 @@
         <p id="data">28 Jun 2020</p>
      </div>
     </main>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  
   
   </div>
+</div>
 </body>
 </html>
