adicionando triangulo da area share

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       
         <div class="person">
           <div class="images">
-            <img src="images/avatar-michelle.jpg" alt="">
+            <img src="images/avatar-michelle.jpg" alt="" width="40px">
             <div class="name">
               <p>Michelle Appleton</p>
               <p>28 Jun 2020</p>
@@ -57,9 +57,7 @@
             <img src="images/icon-twitter.svg" alt="">
             <img src="images/icon-pinterest.svg" alt="">
           </div>
-          <div>
-
-          </div>
+          <div class="triangle"></div>
         </div>
     
       </div>
