adicionando o botao close

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
             <img src="images/icon-twitter.svg" alt="">
             <img src="images/icon-pinterest.svg" alt="">
           </div>
+
+          <button id="buttoncloseOne">
+            <img src="images/icon-share.svg">
+          </button>
+
           <div class="triangle"></div>
         </div>
     
