corrigindo erros de sintaxe

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <img src="images/icon-share.svg">
           </button>
 
-          <button id="buttonclose">
+          <button id="buttonClose">
             <img src="images/icon-share.svg">
           </button>
         </div>
@@ -58,7 +58,7 @@
             <img src="images/icon-pinterest.svg" alt="">
           </div>
 
-          <button id="buttoncloseOne">
+          <button id="buttonCloseOne">
             <img src="images/icon-share.svg">
           </button>
 
@@ -71,6 +71,6 @@
   
   
   
-
+<script src="script.js"></script>
 </body>
 </html>
