--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Article preview component</title>
 
   
@@ -34,10 +35,10 @@
       
         <div class="person">
           <div class="images">
-            <img src="images/avatar-michelle.jpg" alt="" width="40px">
+            <img src="images/avatar-michelle.jpg" alt="" width="60px">
             <div class="name">
-              <p>Michelle Appleton</p>
-              <p>28 Jun 2020</p>
+              <p id="nome">Michelle Appleton</p>
+              <p id="data">28 Jun 2020</p>
             </div>
 
           </div>
